# VBdingHome

./: .gitignore  README.md  README_EN.md  README_TC.md  index.html  package-lock.json  package.json  start-dev.ps1  task.md  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: i18n.ts  main.tsx
src-tauri/: Cargo.toml  cargo_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  launcher.rs  main.rs  models.rs  scanner.rs  storage.rs
src-tauri/src/gateway/: cache.rs  config.rs  converter.rs  mod.rs  proxy.rs  stats.rs
src/components/: Header.tsx  LaunchDialog.tsx  Layout.tsx  ProjectCard.tsx  ProjectEditDialog.tsx  Sidebar.tsx  SortableProjectCard.tsx  TagEditDialog.tsx
src/components/gateway/: ProviderForm.tsx  ProviderList.tsx  RequestChart.tsx
src/lib/: techStackData.ts  utils.ts
src/locales/: en.json  zh-TW.json  zh.json
src/pages/: Gateway.tsx  Home.tsx  Settings.tsx
src/services/: tauri.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: gateway.ts  index.ts
vibe-coding-launcher/: README.md  index.html  package.json  tailwind.config.js
vibe-coding-launcher/.github/workflows/: build.yml  release.yml
vibe-coding-launcher/src-tauri/: tauri.conf.json
vibe-coding-launcher/src-tauri/src/: commands.rs  launcher.rs  main.rs  models.rs  scanner.rs
