[package]
name = "vibehub"
version = "1.3.1"
description = "A cross-platform launcher for development tools"
authors = ["VibeHub"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3.1", features = [] }

[dependencies]
tauri = { version = "1.3.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.3.1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "1.3.1", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
anyhow = "1.0"
axum = { version = "1.3.1", features = ["macros"] }
reqwest = { version = "1.3.1", features = ["json", "stream"] }
tokio = { version = "1.3.1", features = ["full"] }
tower-http = { version = "1.3.1", features = ["cors", "trace"] }
dashmap = "5.5"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

